--- a/lang/th.json
+++ b/lang/th.json
@@ -5,7 +5,7 @@
     "contact": "ติดต่อ",
     "hello":"สวัสดีครับผมชื่อ",
     "myName":"นายสัณหณัฐ ไฉยากุล",
-    "description" : "ผมกำลังมองหางานตำแหน่งโปรแกรมเมอร์",
+    "description" : "ผมกำลังมองหาโอกาสที่จะได้ฝึกฝนและพัฒนาตัวเองในสายงานโปรแกรมเมอร์ครับ ผมมีความมุ่งมั่นที่จะเรียนรู้และพร้อมที่จะทุ่มเทให้กับการทำงานครับ",
     "suranaree" : "มหาวิทยาลัยเทคโนโลยีสรุนรารี",
     "education" : "การศึกษา" ,
     "yearOfBachelor" : "2562 - 2565",
