--- a/lang/en.json
+++ b/lang/en.json
@@ -7,7 +7,7 @@
     "contact": "contact",
     "hello":"hello !",
     "myName":"I'm Sanhanat Chaiyakul",
-    "description" : "I'm looking for Job About Prograimg",
+    "description" : "I'm looking for an opportunity to train and grow as a programmer. I'm eager to learn and ready to dedicate myself to this field.",
     "education" : "Education" ,
     "yearOfBachelor" : "2019-2023",
     "suranaree" : "Suranaree University",
